and go back to copying rather than moving items into the shortlist. Principle: a click should change as little as possible. And we had this bug where the next update would make the very next copy in the stream visible.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -5,7 +5,7 @@
 .contextbutton{ text-align:right; color:#828282; cursor:pointer; }
 .ancestor{ padding-bottom:0.5em; }
 
-.shortlistClose{ float:right; cursor:pointer; }
+.shortlistClose{ float:right; cursor:pointer; margin-left:2em; }
 #stream .shortlistClose{ display:none; }
 #shortlist .shortlistClose{ display: block; }
 
